[package]
name = "kero_kero_repeat"
version = "0.1.0"
authors = ["kaede"]
edition = "2018"

[[bin]]
# https://github.com/rust-lang/rust/issues/45127#issuecomment-662325494
name = "KeroKeroRepeat"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0"
hound = "3"
clap = "2"
tokio = { version = "0.3", features = ["rt", "rt-multi-thread", "sync", "macros"] }
futures = "0.3"
